Fix some scrollbar styles

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -11,16 +11,16 @@
 
 /* Handle Scrollbars in Firefox */
 * {
-  scrollbar-color:  var(--primary-color) rgba(0, 0, 0, 0);
+  scrollbar-color: rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0);
   scrollbar-width: thin;
 }
 /* Handle Scrollbars in Chrome, Safari, and Edge */
 *::-webkit-scrollbar { width: 8px; }
 *::-webkit-scrollbar-track { background: rgba(0, 0, 0, 0); }
 *::-webkit-scrollbar-thumb {
-  background-color: var(--primary-color);
-  border-radius: 10px;
-  border: none;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 html {
